Implementação do Dashboard Cocos

--- a/src/app/app.sidebar.component.html
+++ b/src/app/app.sidebar.component.html
@@ -3,67 +3,45 @@
     <li>
       <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-globe"></i>
-        <span>Sample</span>
+        <span>Dashboard</span>
       </a>
     </li>
     <li>
-      <a [routerLink]="['/forms']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+      <a [routerLink]="['/cadastro']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-check"></i>
-        <span>Forms</span>
+        <span>Cadastro</span>
       </a>
     </li>
     <li>
-      <a [routerLink]="['/data']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+      <a [routerLink]="['/resumo-diario']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-table"></i>
-        <span>Data</span>
+        <span>Resumo Diário</span>
       </a>
     </li>
     <li>
-      <a [routerLink]="['/panels']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+      <a [routerLink]="['/resumo-mensal']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-columns"></i>
-        <span>Panel</span>
+        <span>Resumo Mensal</span>
       </a>
     </li>
     <li>
-      <a [routerLink]="['/overlays']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+      <a [routerLink]="['/pesquisa']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-window-maximize"></i>
-        <span>Overlay</span>
+        <span>Lista lançamentos</span>
       </a>
+      
     </li>
+    
     <li>
-      <a [routerLink]="['/menus']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-        <i class="fa fa-bars"></i>
-        <span>Menu</span>
-      </a>
-    </li>
-    <li>
-      <a [routerLink]="['/charts']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-        <i class="fa fa-pie-chart"></i>
-        <span>Charts</span>
-      </a>
-    </li>
-    <li>
-      <a [routerLink]="['/file']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-        <i class="fa fa-folder"></i>
-        <span>File</span>
-      </a>
-    </li>
-    <li>
-      <a [routerLink]="['/messages']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-        <i class="fa fa-comments"></i>
-        <span>Messages</span>
-      </a>
-    </li>
-    <li>
-      <a [routerLink]="['/misc']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+      <a [routerLink]="['/logout']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-gear"></i>
-        <span>Misc</span>
+        <span>Logout</span>
       </a>
     </li>
   </ul>
 
-  <a href="https://www.primefaces.org/store" class="unlock-btn">
+  <a href="#" class="unlock-btn">
     <i class="fa fa-unlock"></i>
-    <span>UNLOCK DESIGNER</span>
+    <span>Jairo Nascimento</span>
   </a>
 </div>
