--- a/src/app/app.topbar.component.html
+++ b/src/app/app.topbar.component.html
@@ -3,8 +3,9 @@
     <a href="#" id="menu-btn" class="menu-btn" (click)="app.onMobileMenuButton($event)">
       <i class="fa fa-bars"></i>
     </a>
-    <img src="assets/layout/images/logo.png" class="topbar-logo">
+    <!-- <img src="#" class="topbar-logo"> -->
+    <h3 class="topbar-text">SOCOCO</h3>
 
-    <a [routerLink]="['/documentation']" class="topbar-link" (click)="app.hideMobileMenu($event)">Get Started</a>
+    <!-- <a [routerLink]="['/documentation']" class="topbar-link" (click)="app.hideMobileMenu($event)">SOCOCO</a> -->
   </div>
 </div>
