--- a/src/styles.css
+++ b/src/styles.css
@@ -1,80 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-/* You can add global styles to this file, and also import other style files */
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #404C51;
-}
-
-a {
-  color: #337ab7;
-  text-decoration: none;
-}
-
-a:hover, a:focus {
-  text-decoration: underline;
-  text-shadow: 5px 5px 5px rgba(0,0,0,0.5); 
-}
-
-a, button {
-  margin-right: .25em
-}
-
-label {
-  font-weight: bold;
-}
-
-.ui-dropdown-filter-container {
-  width: 100%;
-}
-
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-    margin: 0 auto;
-  }
-}
-
-.col-valor {
-  width: 120px;
-  text-align: right;
-}
-
-.col-valor-header {
-  width: 120px;
-}
-
-.col-data {
-  width: 105px;
-  text-align: center;
-}
-
-th.col-data {
-  background: linear-gradient(to bottom, rgba(29, 134, 134, 0.95), rgba(63, 185, 185, 0.95) 100%);
-  color: #fff !important;
-}
-
-.col-data-header {
-  width: 120px;
-}
-
-.col-acoes {
-  width: 90px;
-  text-align: center;
-}
-
-.col-acoes-header {
-  width: 90px;
-}
-
-.loader {
-  position:absolute;
-	left:50%;
-	top:50%;
-	z-index: 1000;
-}
-
-/*Estilos Panel Cadastro Diário*/
 .panel-btn , .panel-soc, .panel-acq , .panel-ama{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-transform: uppercase;
@@ -90,6 +13,7 @@ th.col-data {
 .panel-soc, .panel-acq, .panel-ama, .ui-panel-content{
   text-align: left;
   font-size: 0.95rem;
+  color: black;
 }
 
 /*Estilos Panel Lançamento Diário*/
@@ -104,13 +28,6 @@ th.col-data {
 
 .panel-ama .ui-panel-titlebar {
     background: rgba(240, 166, 30, 0.95);
-}
-
-.ui-toolbar {
- background: linear-gradient(to bottom, rgba(29, 134, 134, 0.95), rgba(63, 185, 185, 0.95) 100%);
-  color: #fff;
-  font-weight: bold;
-  border: none;
 }
 
 .tabela .ui-widget-header {
@@ -130,9 +47,48 @@ th.col-data {
     padding: 0;
 }
 
+.ui-datepicker{
+    background: #fff;
+}
+
+.col-data {
+  width: 105px;
+  text-align: center;
+}
+
+th.col-data {
+  background: linear-gradient(to bottom, rgba(29, 134, 134, 0.95), rgba(63, 185, 185, 0.95) 100%);
+  color: #fff !important;
+}
+
+.col-data-header {
+  width: 100%;
+}
+
+/**CSS Dashboard**/
+.tab-dsh .ui-menuitem-text {
+  background: linear-gradient(to bottom, rgba(63, 185, 185, 0.95) , rgba(29, 134, 134, 0.95) 100%);
+  color: black;
+}
+
+.tab-dsh .ui-menuitem-link {
+  background: linear-gradient(to bottom, rgba(63, 185, 185, 0.95) , rgba(29, 134, 134, 0.95) 100%);
+  color: black;
+}
+
+.ui-state-active  {
+  color: #fff !important;
+}
 
 
-/*
+.ui-state-active .ui-menuitem-text {
+  background: linear-gradient(to bottom, rgba(0, 153, 255, 0.95), rgba(0, 107, 179, 0.95) 100%);
+  color: #fff !important;
+  text-transform: uppercase;
+  font-weight: bold;
+}
 
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0; */
+.ui-state-active .ui-menuitem-link {
+  background: linear-gradient(to bottom, rgba(0, 153, 255, 0.95), rgba(0, 107, 179, 0.95) 100%);
+  color: #fff !important;
+}
